replace javax annotations with jetbrains ones